infrastructure/jenkins/ingress-jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-clusterissuer
spec:
  ingressClassName: traefik-admin
  rules:
  - host: jenkins.admin.cluster.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
  tls:
  - hosts:
    - jenkins.admin.cluster.local.com
    secretName: wildcard-admin-cluster-tls
